--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.24",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
